# ChangeLog for media-gfx/gimp-print
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/gimp-print/ChangeLog,v 1.28 2003/12/08 10:47:20 lanius Exp $

  08 Dec 2003; Heinrich Wendel <lanius@gentoo.org> gimp-print-4.3.25.ebuild:
  better fix for the cflags problem, thx to brandy

  07 Dec 2003; Heinrich Wendel <lanius@gentoo.org> gimp-print-4.3.25.ebuild:
  won't compile with -O3

*gimp-print-4.3.25 (06 Dec 2003)

  06 Dec 2003; Heinrich Wendel <lanius@gentoo.org> gimp-print-4.3.25.ebuild:
  bump

  11 Oct 2003; Heinrich Wendel <lanius@gentoo.org> gimp-print-4.2.5-r2.ebuild,
  gimp-print-4.3.18.ebuild, gimp-print-4.3.19.ebuild,
  gimp-print-4.3.20.ebuild, gimp-print-4.3.21.ebuild:
  bug #25747

  03 Oct 2003; Heinrich Wendel <lanius@gentoo.org> gimp-print-4.3.21.ebuild:
  stable  bump

  28 Sep 2003; Markus Nigbur <pyrania@gentoo.org> gimp-print-4.2.5-r2.ebuild,
  gimp-print-4.3.18.ebuild, gimp-print-4.3.19.ebuild,
  gimp-print-4.3.20.ebuild, gimp-print-4.3.21.ebuild:
  Removed block of merged media-gfx/gimp-print-cups

*gimp-print-4.3.21 (26 Sep 2003)

  26 Sep 2003; Heinrich Wendel <lanius@gentoo.org> gimp-print-4.3.21.ebuild:
  version bump

*gimp-print-4.3.20 (03 Sep 2003)

  03 Sep 2003; Heinrich Wendel <lanius@gentoo.org> gimp-print-4.3.18.ebuild,
  gimp-print-4.3.20.ebuild:
  version bump

*gimp-print-4.3.19 (11 Aug 2003)

  11 Aug 2003; lanius@gentoo.org gimp-print-4.2.2.ebuild,
  gimp-print-4.2.5-r1.ebuild, gimp-print-4.2.5.ebuild,
  gimp-print-4.3.19.ebuild:
  version bump

*gimp-print-4.2.5-r2 (31 Jul 2003)

  31 Jul 2003; lanius@gentoo.org gimp-print-4.2.5-r2.ebuild:
  backport of 4.3.18 ebuild to stable series

  29 Jul 2003; lanius@gentoo.org gimp-print-4.3.18.ebuild:
  stable bump

  20 Jul 2003; lanius@gentoo.org gimp-print-4.3.18.ebuild:
  fixed cups use flag (bug #24873)

*gimp-print-4.3.18 (16 Jul 2003)
