@@ -1,6 +1,6 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/pstoedit/pstoedit-3.32.ebuild,v 1.6 2003/09/06 23:56:39 msterret Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/pstoedit/pstoedit-3.32.ebuild,v 1.7 2003/12/09 17:49:35 lanius Exp $
 
 inherit libtool
 
@@ -20,7 +20,7 @@ DEPEND="media-libs/libpng
 	flash? ( media-libs/ming )"
 
 RDEPEND="${DEPEND}
-	app-text/ghostscript"
+	virtual/ghostscript"
 
 src_compile() {
 	elibtoolize
