@@ -1,6 +1,6 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/pstoedit/pstoedit-3.33.ebuild,v 1.3 2003/10/02 14:28:12 obz Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/pstoedit/pstoedit-3.33.ebuild,v 1.4 2003/12/09 17:49:35 lanius Exp $
 
 inherit libtool
 
@@ -23,7 +23,7 @@ DEPEND="media-libs/libpng
 #	flash? ( media-libs/ming )"
 
 RDEPEND="${DEPEND}
-	app-text/ghostscript"
+	virtual/ghostscript"
 
 src_compile() {
 
