@@ -1,6 +1,10 @@
 # ChangeLog for media-gfx/pstoedit
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/pstoedit/ChangeLog,v 1.6 2003/10/02 14:28:12 obz Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/pstoedit/ChangeLog,v 1.7 2003/12/09 17:49:35 lanius Exp $
+
+  09 Dec 2003; Heinrich Wendel <lanius@gentoo.org> pstoedit-3.32.ebuild,
+  pstoedit-3.33.ebuild:
+  changed app-text/ghostscript to virtual/ghostscript
 
   02 Oct 2003; Mike Gardiner <obz@gentoo.org> metadata.xml,
   pstoedit-3.33.ebuild:
